--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
     "express": "^4.18.2",
     "firebase": "^9.23.0",
     "firebase-admin": "^11.9.0",
-    "node-geocoder": "^4.2.0"
+    "node-geocoder": "^4.2.0",
+    "nodemailer": "^6.9.4"
   },
   "devDependencies": {
     "@types/cors": "^2.8.13",
